fix z-index

--- a/scss/abstract/_general.scss
+++ b/scss/abstract/_general.scss
@@ -50,6 +50,7 @@
 .home .wp-block-group.call__section {
     margin-top: -80px !important;
     position: relative;
+    z-index: 6;
 }
 
 .hero-title {
